--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ build/Release
 
 # Dependency directories
 node_modules/
+/**/node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
@@ -102,3 +103,4 @@ dist
 
 # TernJS port file
 .tern-port
+lib
