--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "element-message-plus",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "ElementUI Message 组件增强插件",
   "main": "lib/index.js",
   "types": "types/index.d.ts",
@@ -11,7 +11,7 @@
       "require": "lib/index.js"
     }
   },
-  "file": [
+  "files": [
     "lib",
     "types"
   ],
