--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "element-message-plus",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "ElementUI Message 组件增强插件",
   "main": "lib/index.js",
   "types": "types/index.d.ts",
@@ -34,9 +34,11 @@
   "homepage": "https://github.com/wleven/element-message-plus#readme",
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.3.2",
-    "element-ui": "^2.15.8",
     "rollup": "^2.70.2",
     "tslib": "^2.4.0",
     "typescript": "^4.6.3"
+  },
+  "peerDependencies": {
+    "element-ui": "^2.15.8"
   }
 }
