--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "element-message-plus",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "ElementUI Message 组件增强插件",
   "main": "lib/index.js",
   "types": "types/index.d.ts",
@@ -36,9 +36,7 @@
     "@rollup/plugin-typescript": "^8.3.2",
     "rollup": "^2.70.2",
     "tslib": "^2.4.0",
-    "typescript": "^4.6.3"
-  },
-  "peerDependencies": {
+    "typescript": "^4.6.3",
     "element-ui": "^2.15.8"
   }
 }
